--- a/scss/header/navigation.scss
+++ b/scss/header/navigation.scss
@@ -1,10 +1,11 @@
 .navigation {
 		display: flex;
 		align-items: center;
-		justify-content: space-around;
+		justify-content: space-between;
 		height: 80px;
 		box-sizing: border-box;
 		background: white url('../img/header/logo-black-2x.png') 8%/5% no-repeat;
+		padding: 0 10% 0 15%;
 		li { display: inline-block;
 			a {
 			font-size: 1.375em;
