--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@ p, h1, h2, h3, span {
 	cursor: default;
 }
 body {
-	min-width: 1500px;
+	min-width: 1200px;
 }
 html {
 	font-size: 16px;
@@ -17,4 +17,5 @@ html {
 @import "UI/fonts";
 @import "UI/color";
 
-@import "header/header.scss";
+@import "header/header";
+@import "offer/offer";
