--- a/css/main.css
+++ b/css/main.css
@@ -18,22 +18,27 @@ html {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Light.ttf);
   font-weight: 300; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Regular.ttf);
   font-weight: 400; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Semibold.ttf);
   font-weight: 600; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Bold.ttf);
   font-weight: 700; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-ExtraBold.ttf);
   font-weight: 900; }
+
 .header {
   position: relative;
   height: 90vh;
@@ -43,10 +48,20 @@ html {
   color: white;
   background: url("../img/header/main.png") center/cover no-repeat; }
   .header .navigation {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     height: 80px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     background: white url("../img/header/logo-black-2x.png") 8%/5% no-repeat;
     padding: 0 10% 0 15%; }
@@ -81,8 +96,18 @@ html {
     position: absolute;
     top: 40%;
     right: 10%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center; }
     .header .logo h2 {
       font-size: 3.375em;
@@ -94,12 +119,23 @@ html {
   .header .yellow-block {
     height: 80px;
     width: 280px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     color: black;
     margin-top: 30px;
     padding: 20px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #ffce22;
     border: 1px solid #ac8d21; }
@@ -117,6 +153,8 @@ html {
       .header .yellow-block span:before {
         position: absolute;
         bottom: 8px;
+        -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
         transform: rotate(-45deg);
         right: -35px;
         width: 32px;
@@ -129,17 +167,35 @@ html {
         top: -5px;
         right: -15px; }
   .header .gradient {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 100%;
     height: 200px;
     position: absolute;
     bottom: 0px;
     z-index: 2;
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-gradient(linear, left bottom, left top, from(black), to(transparent));
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-linear-gradient(bottom, black, transparent);
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -o-linear-gradient(bottom, black, transparent);
     background: url("../img/header/bottom.png") bottom/7% repeat-x, linear-gradient(to top, black, transparent); }
   .header .buy-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     position: relative;
     bottom: -90px;
@@ -185,19 +241,48 @@ html {
   height: 120vh;
   background-color: white;
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center; }
   .offer .block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 20px 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    color: white;
     position: relative;
     z-index: 1;
     height: 520px;
-    width: 240px; }
+    width: 240px;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
+    border-bottom: 5px solid #566b01; }
+    .offer .block:hover {
+      -webkit-box-shadow: 2px 0px 25px black;
+      box-shadow: 2px 0px 25px black;
+      z-index: 98; }
     .offer .block:after {
       position: absolute;
       left: 30px;
@@ -205,7 +290,12 @@ html {
       content: "";
       width: 180px;
       border-bottom: 1px solid white; }
+    .offer .block form {
+      left: 35px;
+      top: 120px;
+      position: absolute; }
     .offer .block h3 {
+      text-transform: uppercase;
       color: white;
       position: relative;
       font-size: 1.5em;
@@ -220,25 +310,123 @@ html {
       display: inline-block;
       font-size: 0.875em;
       width: 80px;
-      padding: 5px 5px 5px 25px;
-      text-align: center; }
-    .offer .block input {
+      padding: 2px 5px 2px 25px;
+      text-align: left; }
+    .offer .block input[type="radio"] {
       margin-bottom: 10px;
       position: relative;
+      top: 2px;
       left: 25px; }
     .offer .block input:checked + label {
       color: white;
       border-radius: 30px;
       border: 1px solid #647313;
       background-color: #758716; }
-    .offer .block .rose {
+    .offer .block input[data-name="delivery-pay"] {
+      top: -10px; }
+    .offer .block input[type="submit"] {
+      font-size: 1.25em;
+      height: 50px;
+      width: 177px;
+      background-color: #ffcf26;
+      border: none;
+      text-transform: uppercase;
+      font-weight: 700;
+      position: absolute;
+      left: 30px;
+      bottom: 30px;
+      -webkit-box-shadow: 1px 1px 1px #667613;
+      box-shadow: 1px 1px 1px #667613;
+      -webkit-transition: 0.2s;
+      -o-transition: 0.2s;
+      transition: 0.2s; }
+      .offer .block input[type="submit"]:hover {
+        -webkit-transform: scale(1.04);
+        -ms-transform: scale(1.04);
+        transform: scale(1.04); }
+    .offer .block .cost {
+      padding: 0;
+      font-size: 3em;
+      position: absolute;
+      text-align: center;
+      bottom: 100px; }
+      .offer .block .cost span {
+        font-weight: 700; }
+    .offer .block .radio {
+      height: 80px;
       background: transparent url("../img/offer/rose.png") 0 center no-repeat;
       padding-top: 20px;
-      padding-bottom: 20px;
       padding-left: 40px; }
+      .offer .block .radio span {
+        font-size: 0.8em;
+        top: -5px;
+        position: relative;
+        font-weight: 700; }
+    .offer .block .sale {
+      position: absolute;
+      left: 25px;
+      bottom: 150px;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      background-color: #ffcf26; }
+      .offer .block .sale p {
+        text-transform: uppercase;
+        color: black;
+        padding-top: 8px;
+        font-size: 0.7em; }
+        .offer .block .sale p span {
+          font-weight: 700;
+          font-size: 1.5em; }
+      .offer .block .sale .line-through {
+        position: absolute;
+        left: 55px;
+        top: 5px;
+        width: 70px;
+        font-size: 1.125em;
+        text-align: left;
+        color: white;
+        text-decoration: line-through; }
   .offer .offer-one,
-  .offer .offer-medium {
+  .offer .popular {
     background-color: #92a91b; }
   .offer .offer-low,
-  .offer .offer-custom {
+  .offer .custom {
     background-color: #669900; }
+  .offer .offer-one {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px; }
+  .offer .popular {
+    font-size: 18px;
+    height: 600px;
+    border: none;
+    border-radius: 20px;
+    position: relative;
+    z-index: 99; }
+    .offer .popular:after {
+      content: "Популярный выбор";
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      color: black;
+      height: 50px;
+      border: none;
+      background-color: #fece25;
+      width: 260px;
+      left: -10px; }
+    .offer .popular .sale {
+      bottom: 160px; }
+    .offer .popular label {
+      width: 100px; }
+  .offer .custom {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px; }
