--- a/pug/offer/one-rose.jade
+++ b/pug/offer/one-rose.jade
@@ -1,7 +1,8 @@
 .block.offer-one
 	h3 Одна роза
-	p Элегантный подарок любимому&nbsp;человеку
+	p.about Элегантный подарок любимому&nbsp;человеку
 	form
+		
 		.radio
 			input(type="radio" name="rose-one" id="red-rose-one" checked) 
 			label(for="red-rose-one") красная
