--- a/scss/offer/offer.scss
+++ b/scss/offer/offer.scss
@@ -38,7 +38,9 @@
 			width: 260px;
 			left: -10px;
 		}
-		.sale { bottom: 160px;}
+		.cost { top: 370px;}
+
+		.sale { bottom: 160px; font-size: 1rem;}
 		label { width: 100px;}
 	}
 	.custom {
