--- a/pug/index.jade
+++ b/pug/index.jade
@@ -6,6 +6,7 @@ head
 	meta(name='viewport', content='width=device-width')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+	script(src="script/input-arrows.js")
 title Букет роз - интернет магазин
 body
 	include header.jade
