update count jq

--- a/css/main.css
+++ b/css/main.css
@@ -18,22 +18,27 @@ html {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Light.ttf);
   font-weight: 300; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Regular.ttf);
   font-weight: 400; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Semibold.ttf);
   font-weight: 600; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-Bold.ttf);
   font-weight: 700; }
+
 @font-face {
   font-family: OpenSans;
   src: url(../fonts/OpenSans/OpenSans-ExtraBold.ttf);
   font-weight: 900; }
+
 .header {
   position: relative;
   height: 90vh;
@@ -43,10 +48,20 @@ html {
   color: white;
   background: url("../img/header/main.png") center/cover no-repeat; }
   .header .navigation {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     height: 80px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     background: white url("../img/header/logo-black-2x.png") 8%/5% no-repeat;
     padding: 0 10% 0 15%; }
@@ -81,8 +96,18 @@ html {
     position: absolute;
     top: 40%;
     right: 10%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center; }
     .header .logo h2 {
       font-size: 3.375em;
@@ -94,12 +119,23 @@ html {
   .header .yellow-block {
     height: 80px;
     width: 280px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     color: black;
     margin-top: 30px;
     padding: 20px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     background-color: #ffce22;
     border: 1px solid #ac8d21; }
@@ -117,6 +153,8 @@ html {
       .header .yellow-block span:before {
         position: absolute;
         bottom: 8px;
+        -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
         transform: rotate(-45deg);
         right: -35px;
         width: 32px;
@@ -129,17 +167,35 @@ html {
         top: -5px;
         right: -15px; }
   .header .gradient {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 100%;
     height: 200px;
     position: absolute;
     bottom: 0px;
     z-index: 2;
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-gradient(linear, left bottom, left top, from(black), to(transparent));
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-linear-gradient(bottom, black, transparent);
+    background: url("../img/header/bottom.png") bottom/7% repeat-x, -o-linear-gradient(bottom, black, transparent);
     background: url("../img/header/bottom.png") bottom/7% repeat-x, linear-gradient(to top, black, transparent); }
   .header .buy-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
     position: relative;
     bottom: -90px;
@@ -183,25 +239,53 @@ html {
 
 .offer {
   height: 120vh;
+  min-height: 900px;
   background-color: white;
   position: relative;
+  background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-gradient(linear, left bottom, left top, from(#f2f2f2), to(white)) no-repeat;
+  background: url("../img/header/bottom.png") bottom/7% repeat-x, -webkit-linear-gradient(bottom, #f2f2f2, white) no-repeat;
+  background: url("../img/header/bottom.png") bottom/7% repeat-x, -o-linear-gradient(bottom, #f2f2f2, white) no-repeat;
+  background: url("../img/header/bottom.png") bottom/7% repeat-x, linear-gradient(to top, #f2f2f2, white) no-repeat;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center; }
   .offer .block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 20px 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     color: white;
     position: relative;
     z-index: 1;
     height: 520px;
     width: 240px;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
     border-bottom: 5px solid #566b01; }
     .offer .block:hover {
+      -webkit-box-shadow: 2px 0px 25px black;
       box-shadow: 2px 0px 25px black;
       z-index: 98; }
     .offer .block:after {
@@ -211,6 +295,31 @@ html {
       content: "";
       width: 180px;
       border-bottom: 1px solid white; }
+    .offer .block input[type="number"] {
+      position: absolute;
+      top: 25px;
+      left: 65px;
+      height: 25px;
+      width: 40px;
+      border: 1px solid #666600;
+      background-color: #d3dcaf;
+      border-radius: 5px;
+      text-align: right;
+      font-size: 1rem;
+      padding-right: 5px; }
+      .offer .block input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none; }
+    .offer .block .arrowup, .offer .block .arrowdown {
+      position: absolute;
+      width: 15px;
+      height: 10px;
+      background-color: red;
+      top: -93px;
+      left: 10px;
+      background: transparent url("../img/offer/arrowup.png") left top no-repeat; }
+    .offer .block .arrowdown {
+      top: -77px;
+      background: transparent url("../img/offer/arrowdown.png") left top no-repeat; }
     .offer .block form {
       left: 35px;
       top: 120px;
@@ -257,35 +366,15 @@ html {
       position: absolute;
       left: 30px;
       bottom: 30px;
+      -webkit-box-shadow: 1px 1px 1px #667613;
       box-shadow: 1px 1px 1px #667613;
+      -webkit-transition: 0.2s;
+      -o-transition: 0.2s;
       transition: 0.2s; }
       .offer .block input[type="submit"]:hover {
+        -webkit-transform: scale(1.04);
+        -ms-transform: scale(1.04);
         transform: scale(1.04); }
-    .offer .block input[type="number"] {
-      position: absolute;
-      top: -95px;
-      left: 0px;
-      height: 25px;
-      width: 40px;
-      border: 1px solid #666600;
-      background-color: #d3dcaf;
-      border-radius: 5px;
-      text-align: right;
-      font-size: 1rem;
-      padding-right: 5px; }
-      .offer .block input[type="number"]::-webkit-inner-spin-button {
-        -webkit-appearance: none; }
-    .offer .block .arrowup, .offer .block .arrowdown {
-      position: absolute;
-      width: 15px;
-      height: 10px;
-      background-color: red;
-      top: -93px;
-      left: -17px;
-      background: transparent url("../img/offer/arrowup.png") left top no-repeat; }
-    .offer .block .arrowdown {
-      top: -77px;
-      background: transparent url("../img/offer/arrowdown.png") left top no-repeat; }
     .offer .block .cost {
       font-size: 3em;
       position: relative;
@@ -347,8 +436,17 @@ html {
     z-index: 99; }
     .offer .popular:after {
       content: "Популярный выбор";
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
       align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
       justify-content: center;
       color: black;
       height: 50px;
@@ -366,3 +464,6 @@ html {
   .offer .custom {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px; }
+    .offer .custom h3 {
+      left: 20px;
+      position: relative; }
