--- a/pug/offer/custom-rose.jade
+++ b/pug/offer/custom-rose.jade
@@ -1,8 +1,8 @@
 .block.custom
-	h3 роза
+	h3 роз
 	p.about
 		| Составьте свой букет!
-	input(type="number" name="rose-count" id="rose-count" min="3" max="999" value="32")
+	input(type="number" name="rose-count" id="rose-count" min="3" max="999" value="5")
 	form
 		
 		.arrowup
