--- a/scss/offer/offer.scss
+++ b/scss/offer/offer.scss
@@ -1,8 +1,11 @@
 .offer {
 	height: 120vh;
+	min-height: 900px;
 	background-color: white;
 	position: relative;
-
+	background: 
+		url('../img/header/bottom.png') bottom/7% repeat-x,
+		linear-gradient(to top, #f2f2f2, white) no-repeat;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -46,6 +49,10 @@
 	.custom {
 		border-top-right-radius: 20px;
 		border-bottom-right-radius: 20px;
+		h3 {
+			left: 20px;
+			position: relative;
+		}
 
 	}
 }
