improve input-arrow.js

--- a/scss/offer/blocks/elements.scss
+++ b/scss/offer/blocks/elements.scss
@@ -73,6 +73,7 @@ input[type="submit"] {
 	width: 50px;
 	height: 50px;
 	background-color: #ffcf26;
+	transition: 0.5s;
 	p { text-transform: uppercase; 
 		position: relative;
 		left: 4px;
