--- a/css/main.css
+++ b/css/main.css
@@ -398,7 +398,10 @@ html {
       border-radius: 50%;
       width: 50px;
       height: 50px;
-      background-color: #ffcf26; }
+      background-color: #ffcf26;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
       .offer .block .sale p {
         text-transform: uppercase;
         position: relative;
